# voice_master

./: Cargo.toml  README.md  bundler.toml  shell.nix  test_patchbay.xml
src/: editor.rs  lib.rs  main.rs  mc_pitch.rs  pitch.rs  todo.org
