[package]
name = "voice_master"
version = "0.1.0"
edition = "2021"
authors = ["Bart Brouns <bart@magnetophon.nl>"]
description = "a master plugin for VoiceOfFaust"
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

atomic_float = "0.1"

# pitch-detection = "0.3.0"

pitch-detection = { git = "https://github.com/magnetophon/pitch-detection.git" }

[patch]
[patch.'https://github.com/magnetophon/pitch-detection']
pitch-detection = { path = "../pitch-detection" }
